libraries/ckit/regression/valid-programs/a67.c
int a[20];
int a[];

int main () { return(0);}
